TOX footnote overlapping fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1038103

--- a/ebookStylesheets/css/document.css
+++ b/ebookStylesheets/css/document.css
@@ -1070,7 +1070,7 @@ tbody .cgt,
 .footnote > sup {
   display: block;
   height: 0;
-  text-indent: 2.3em;
+  text-indent: 1.8em;
   width: 100%;
   z-index: 2;
 }
